...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:background="@drawable/gradient_layer"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvTitleName"
            style="@style/item_title_text_style"
            android:text="Billions of Dollars May Be Waiting to Enter Bitcoin, Stunning USDT Data Shows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
...
